# ML_1

./: .gitignore  README.md  aung.md
10_Pipeline_Orchestration/pyspark/: docker-compose.yml
12_Concurrency_In_AI_workloads/pyspark/: Dockerfile  requirements.txt
12_Concurrency_In_AI_workloads/pyspark/jobs/: StringIndexer_VectorAssembler.ipynb
14_Advance_AI/agentic_rag/: agentic_rag_sample1.ipynb
14_Advance_AI/fed_lr/research/fed_test/: client_1.py  client_2.py  client_3.py  server_nb.ipynb  tf_data_and_model.py
14_Advance_AI/fed_lr/tharhtet/: README.md  pyproject.toml
14_Advance_AI/fed_lr/tharhtet/research/: fed_with_simple_tf.ipynb  splited_train_data.ipynb
14_Advance_AI/fed_lr/tharhtet/research/fed_test/: server.py
14_Advance_AI/fed_lr/tharhtet/tharhtet/: __init__.py  client_app.py  server_app.py  task.py
14_Advance_AI/tr_and_student_network/: knowledge_distillation.ipynb  tf_with_gradientTape.ipynb
